--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,25 +1,23 @@
-ARCADIA_ROOT=../../../..
-YA_BIN=$(ARCADIA_ROOT)/ya
 PROJECT=mysync
 
 base_img:
-	docker build --tag=registry.yandex.net/dbaas/mysync-test-base images/base
-	docker push registry.yandex.net/dbaas/mysync-test-base
+	docker build --tag=mysync-test-base images/base
+	#docker push mysync-test-base
 
 jepsen_base:
-	docker build --tag=registry.yandex.net/dbaas/mysync-jepsen-test-base images/jepsen_common
-	docker push registry.yandex.net/dbaas/mysync-jepsen-test-base
+	docker build --tag=mysync-jepsen-test-base images/jepsen_common
+	#docker push mysync-jepsen-test-base
 
 test:
-	$(YA_BIN) make --target-platform=default-linux-x86_64 ../cmd/mysync
-	$(YA_BIN) make .
+	GOOS=linux go build -o ../cmd/mysync/mysync ../cmd/mysync
+	go build ./...
 	rm -rf ./logs
 	mkdir ./logs
-	$(YA_BIN) tool go test -timeout 150m
+	go test -timeout 150m
 
 jepsen_test:
-	$(YA_BIN) make --target-platform=default-linux-x86_64 ../cmd/mysync
-	$(YA_BIN) make
+	GOOS=linux go build -o ../cmd/mysync/mysync ../cmd/mysync
+	go build ./...
 	rm -fr ./images/mysql_jepsen/mysync && cp ../cmd/mysync/mysync ./images/mysql_jepsen/mysync
 	docker-compose -p $(PROJECT) -f images/jepsen-compose.yml up -d --force-recreate --build
 	timeout 600 docker exec mysync_zoo1_1 retriable_path_create.sh /test/ha_nodes
