--- a/tests/images/jepsen_main/Dockerfile
+++ b/tests/images/jepsen_main/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.yandex.net/dbaas/mysync-jepsen-test-base:latest
+FROM mysync-jepsen-test-base:latest
 ENV LEIN_ROOT 1
 COPY . /var/lib/dist/jepsen_main
 RUN apt-get -qq update && apt-get install libjna-java \
