--- a/tests/images/zookeeper/Dockerfile
+++ b/tests/images/zookeeper/Dockerfile
@@ -1,3 +1,3 @@
-FROM registry.yandex.net/dbaas/mysync-test-base:latest
+FROM mysync-test-base:latest
 COPY . /var/lib/dist/zookeeper
 RUN bash /var/lib/dist/zookeeper/setup.sh
