--- a/tests/images/zookeeper_jepsen/Dockerfile
+++ b/tests/images/zookeeper_jepsen/Dockerfile
@@ -1,4 +1,4 @@
-FROM registry.yandex.net/dbaas/mysync-jepsen-test-base:latest
+FROM mysync-jepsen-test-base:latest
 COPY . /var/lib/dist/zookeeper
 COPY ./supervisor_zookeeper.conf /etc/supervisor/conf.d
 COPY ./retriable_path_create.sh /usr/local/bin/retriable_path_create.sh
