--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -76,3 +76,8 @@ jobs:
         
       - name: Run test
         run: ${{ matrix.command }}
+        
+      - uses: actions/upload-artifact@v3
+        with:
+          name: logs
+          path: tests/logs
