--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -78,6 +78,7 @@ jobs:
         run: ${{ matrix.command }}
         
       - uses: actions/upload-artifact@v3
+        if: failure()
         with:
           name: logs
           path: tests/logs
