--- a/tests/images/mysql/my.cnf
+++ b/tests/images/mysql/my.cnf
@@ -1,10 +1,10 @@
 [client]
 port = 3306
-socket = /var/run/mysqld.sock
+socket = /var/run/mysql/mysqld.sock
 
 [mysqld_safe]
 nice = 0
-socket = /var/run/mysqld.sock
+socket = /var/run/mysql/mysqld.sock
 log_error = /var/log/mysql/error.log
 timezone = Europe/Moscow
 log_timestamps = SYSTEM
@@ -14,8 +14,8 @@ open_files_limit = 65535
 plugin_load_add = 'rpl_semi_sync_master=semisync_master.so;rpl_semi_sync_slave=semisync_slave.so'
 user = mysql
 port = 3306
-pid_file = /var/run/mysqld.pid
-socket = /var/run/mysqld.sock
+pid_file = /var/run/mysql/mysqld.pid
+socket = /var/run/mysql/mysqld.sock
 log_error = /var/log/mysql/error.log
 log_error_verbosity = 3
 general_log = ON
