add multiple replication channels

--- a/tests/images/mysql/mysync.yaml
+++ b/tests/images/mysql/mysync.yaml
@@ -45,3 +45,4 @@ exclude_users:
 replication_repair_cooldown: 10s
 replication_repair_aggressive_mode: ${MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:-false}
 test_filesystem_readonly_file: /tmp/readonly
+replication_channel: test_channel
