add 8.0 docker tests flow

--- a/tests/images/zookeeper/Dockerfile
+++ b/tests/images/zookeeper/Dockerfile
@@ -1,3 +1,4 @@
-FROM mysync-test-base:latest
+ARG VERSION=""
+FROM mysync-test-base${VERSION}:latest
 COPY . /var/lib/dist/zookeeper
 RUN bash /var/lib/dist/zookeeper/setup.sh
