--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -4,12 +4,13 @@ services:
   zoo1:
     build:
       context: ./zookeeper
+      args:
+        - VERSION=$VERSION
     hostname: zoo1
     ports:
         - 2181
     privileged: true
     environment:
-      VERSION:
       ZK_SERVERS: server.1=zoo1:2888:3888, server.2=zoo2:2888:3888, server.3=zoo3:2888:3888
       ZK_MYID: 1
     healthcheck:
@@ -25,12 +26,13 @@ services:
   zoo2:
     build:
       context: ./zookeeper
+      args:
+        - VERSION=$VERSION
     hostname: zoo2
     ports:
         - 2181
     privileged: true
     environment:
-      VERSION:
       ZK_SERVERS: server.1=zoo1:2888:3888, server.2=zoo2:2888:3888, server.3=zoo3:2888:3888
       ZK_MYID: 2
     networks:
@@ -40,12 +42,13 @@ services:
   zoo3:
     build:
       context: ./zookeeper
+      args:
+        - VERSION=$VERSION
     hostname: zoo3
     ports:
         - 2181
     privileged: true
     environment:
-      VERSION:
       ZK_SERVERS: server.1=zoo1:2888:3888, server.2=zoo2:2888:3888, server.3=zoo3:2888:3888
       ZK_MYID: 3
     networks:
@@ -55,6 +58,8 @@ services:
   mysql1:
     build:
       context: ./mysql
+      args:
+        - VERSION=$VERSION
     hostname: mysql1
     ports:
         - 3306
@@ -79,7 +84,6 @@ services:
       MYSYNC_RESETUP_CRASHED_HOSTS:
       MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:
       MYSYNC_SET_RO_TIMEOUT:
-      VERSION:
     healthcheck:
       test: "mysql --user=admin --password=admin_pwd -e 'SELECT 1'"
       start_period: 30s
@@ -96,6 +100,8 @@ services:
   mysql2:
     build:
       context: ./mysql
+      args:
+        - VERSION=$VERSION
     hostname: mysql2
     ports:
         - 3306
@@ -120,7 +126,6 @@ services:
       MYSYNC_RESETUP_CRASHED_HOSTS:
       MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:
       MYSYNC_SET_RO_TIMEOUT:
-      VERSION:
     depends_on:
       mysql1:
         condition: service_healthy
@@ -131,6 +136,8 @@ services:
   mysql3:
     build:
       context: ./mysql
+      args:
+        - VERSION=$VERSION
     hostname: mysql3
     ports:
         - 3306
@@ -155,7 +162,6 @@ services:
       MYSYNC_RESETUP_CRASHED_HOSTS:
       MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:
       MYSYNC_SET_RO_TIMEOUT:
-      VERSION:
     depends_on:
       mysql1:
         condition: service_healthy
