fix config for 8.0

--- a/tests/images/mysql/my.cnf
+++ b/tests/images/mysql/my.cnf
@@ -75,6 +75,10 @@ relay_log_recovery = ON
 log_bin = mysql-bin-log
 relay_log = mysql-relay-log
 sync_binlog = 1
+rpl_semi_sync_master_timeout = 31536000000
+rpl_semi_sync_master_wait_for_slave_count = 1
+rpl_semi_sync_master_wait_no_slave = ON
+rpl_semi_sync_master_wait_point = AFTER_SYNC
 
 # we should start in
 # * read-only mode to avoid split brain after restart
