--- a/tests/images/mysql/my.cnf
+++ b/tests/images/mysql/my.cnf
@@ -29,7 +29,7 @@ basedir	= /usr
 datadir	= /var/lib/mysql
 tmpdir = /tmp
 lc_messages_dir	= /usr/share/mysql
-max-connect-errors = 1000000
+max_connect_errors = 1000000
 local_infile = OFF
 slave_net_timeout = 30
 
