fix replica/slave status different columns in answer (#12)
* fix replica/slave status different columns in answer

* fix GetSlaveOrReplicaStruct

* fix version

* fix version

* fix version

* fix version

* fix version

* fix version

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* add 8.0 docker tests flow

* fix cache keys for base images

* add code checkout for connect hashFiles output

* add code checkout for connect hashFiles output

* remove query_cache_size from cfg

* remove innodb_use_global_flush_log_at_trx_commit from cfg

* remove rpl_semi_sync_master_timeout from cfg

* remove rpl_semi_sync_master_wait_for_slave_count from cfg

* remove rpl_semi_sync_master_wait_for_slave_count from cfg

* dont delete datadir on 8.0

* revert apt changes

* fix apt for 8.0

* fix seconds behind master->replica

* fix seconds slave/replica tests queries

* fix seconds slave/replica tests queries

* revert debug&zk downloads path

* fix ReplicationLag for nil slavestatus

* fix semysync for 8.0

* fix semysync for 8.0

* fix config for 8.0

* fix config for 8.0

* remove semisync_source.so&semisync_replica.so install

* set mysql_native_password auth plugin as default for 8.0 tests

* fix source state check in tests, some renaming

* rename all 8-0 to 8.0

* some renames replica/slave-status&structs

---------

Co-authored-by: suetin <sue

--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -4,6 +4,8 @@ services:
   zoo1:
     build:
       context: ./zookeeper
+      args:
+        - VERSION=$VERSION
     hostname: zoo1
     ports:
         - 2181
@@ -24,6 +26,8 @@ services:
   zoo2:
     build:
       context: ./zookeeper
+      args:
+        - VERSION=$VERSION
     hostname: zoo2
     ports:
         - 2181
@@ -38,6 +42,8 @@ services:
   zoo3:
     build:
       context: ./zookeeper
+      args:
+        - VERSION=$VERSION
     hostname: zoo3
     ports:
         - 2181
@@ -52,6 +58,8 @@ services:
   mysql1:
     build:
       context: ./mysql
+      args:
+        - VERSION=$VERSION
     hostname: mysql1
     ports:
         - 3306
@@ -92,6 +100,8 @@ services:
   mysql2:
     build:
       context: ./mysql
+      args:
+        - VERSION=$VERSION
     hostname: mysql2
     ports:
         - 3306
@@ -126,6 +136,8 @@ services:
   mysql3:
     build:
       context: ./mysql
+      args:
+        - VERSION=$VERSION
     hostname: mysql3
     ports:
         - 3306
