--- a/tests/images/mysql/Dockerfile
+++ b/tests/images/mysql/Dockerfile
@@ -1,4 +1,7 @@
-FROM mysync-test-base:latest
+ARG VERSION=""
+FROM mysync-test-base${VERSION}:latest
+ARG VERSION=""
+ENV VERSION="${VERSION}"
 COPY . /var/lib/dist/mysql
 COPY ./mysync /usr/bin/mysync
 RUN bash /var/lib/dist/mysql/setup.sh
