zk_auth + zk_ssl

--- a/tests/images/base/Dockerfile
+++ b/tests/images/base/Dockerfile
@@ -6,4 +6,5 @@ ARG MYSQL_VERSION=""
 ENV MYSQL_VERSION="${MYSQL_VERSION}"
 COPY . /var/lib/dist/base
 RUN bash /var/lib/dist/base/setup.sh
+RUN chmod 755 /var/lib/dist/base/generate_certs.sh
 CMD ["/usr/local/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
