--- a/tests/images/mysql/supervisor_mysql.conf
+++ b/tests/images/mysql/supervisor_mysql.conf
@@ -2,7 +2,8 @@
 command=bash /var/lib/dist/mysql/start_mysync.sh
 process_name=%(program_name)s
 autostart=true
-autorestart=false
+startretries=100000
+autorestart=true
 stopsignal=TERM
 user=mysql
 priority=15
