--- a/tests/images/mysql_jepsen/supervisor_mysql.conf
+++ b/tests/images/mysql_jepsen/supervisor_mysql.conf
@@ -2,6 +2,7 @@
 command=bash /var/lib/dist/mysql/start_mysync.sh
 process_name=%(program_name)s
 autostart=true
+startretries=100000
 autorestart=true
 stopsignal=TERM
 user=mysql
