--- a/tests/images/zookeeper/supervisor_zookeeper.conf
+++ b/tests/images/zookeeper/supervisor_zookeeper.conf
@@ -3,6 +3,6 @@ command=bash /var/lib/dist/zookeeper/start.sh
 environment=ZOO_LOG_DIR=/var/log/zookeeper,ZOO_LOG4J_PROP='INFO,ROLLINGFILE'
 process_name=%(program_name)s
 autostart=true
-autorestart=false
+autorestart=true
 stopsignal=TERM
 priority=5
