--- a/tests/images/zookeeper_jepsen/zoo.cfg
+++ b/tests/images/zookeeper_jepsen/zoo.cfg
@@ -36,7 +36,15 @@ autopurge.purgeInterval=0
 leaderServes=yes
 quorumListenOnAllIPs=true
 jute.maxbuffer=16777216
-skipACL=yes
+
+secureClientPort=2281
+serverCnxnFactory=org.apache.zookeeper.server.NettyServerCnxnFactory
+portUnification=false
+skipACL=no
+ssl.trustStore.password=testpassword123
+ssl.trustStore.location=/etc/zk-ssl/truststore.jks
+ssl.keyStore.password=testpassword321
+ssl.keyStore.location=/etc/zk-ssl/server.jks
 
 
 # servers section will be generated from env variablses
