--- a/tests/images/mysql/mysync.yaml
+++ b/tests/images/mysql/mysync.yaml
@@ -16,6 +16,14 @@ zookeeper:
   session_timeout: 3s
   namespace: /test
   hosts: [ $ZK_SERVERS ]
+  auth: true
+  username: testuser
+  password: testpassword123
+  use_ssl: true
+  keyfile: /etc/zk-ssl/server.key
+  certfile: /etc/zk-ssl/server.crt
+  ca_cert: /etc/zk-ssl/ca.cert.pem
+  verify_certs: true
 mysql:
   user: $MYSQL_ADMIN_USER
   password: $MYSQL_ADMIN_PASSWORD
