--- a/.github/workflows/docker-jepsen.yml
+++ b/.github/workflows/docker-jepsen.yml
@@ -1,10 +1,12 @@
-name: Docker tests
+name: Jepsen tests
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron: '0 0 * * *'
 
 env:
   GO_VERSION: 1.19
