--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -7,7 +7,8 @@ on:
     branches: [ master ]
 
 env:
-  GO_VERSION: 1.21.3
+  GO_VERSION: 1.21.6
+  DOCKER_API_VERSION: 1.43
 
 jobs:
   buildimages:
