fix mysync.yaml syntax err

--- a/tests/images/mysql/mysync.yaml
+++ b/tests/images/mysql/mysync.yaml
@@ -11,7 +11,7 @@ failover_delay: ${MYSYNC_FAILOVER_DELAY:-0s}
 inactivation_delay: ${MYSYNC_INACTIVATION_DELAY:-5s}
 semi_sync: ${MYSYNC_SEMISYNC:-true}
 async: ${MYSYNC_ASYNC:-false}
-async_allowed_lag: $(ASYNC_ALLOWED_LAG:-0s}
+async_allowed_lag: ${ASYNC_ALLOWED_LAG:-0}
 resetupfile: /tmp/mysync.resetup
 resetup_crashed_hosts: ${MYSYNC_RESETUP_CRASHED_HOSTS:-false}
 zookeeper:
