fix docker compose cfg

--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -86,6 +86,8 @@ services:
       MYSQL_PORT: 3306
       MYSYNC_DISABLE_REPLICATION_ON_MAINT: "true"
       MYSYNC_SEMISYNC:
+      MYSYNC_ASYNC:
+      ASYNC_ALLOWED_LAG:
       MYSYNC_CRITICAL_DISK_USAGE:
       MYSYNC_KEEP_SUPER_WRITABLE_ON_CRITICAL_DISK_USAGE:
       MYSYNC_WAIT_FOR_SLAVE_COUNT:
@@ -128,6 +130,8 @@ services:
       MYSQL_PORT: 3306
       MYSYNC_DISABLE_REPLICATION_ON_MAINT: "true"
       MYSYNC_SEMISYNC:
+      MYSYNC_ASYNC:
+      ASYNC_ALLOWED_LAG:
       MYSYNC_CRITICAL_DISK_USAGE:
       MYSYNC_KEEP_SUPER_WRITABLE_ON_CRITICAL_DISK_USAGE:
       MYSYNC_WAIT_FOR_SLAVE_COUNT:
@@ -164,6 +168,8 @@ services:
       MYSQL_PORT: 3306
       MYSYNC_DISABLE_REPLICATION_ON_MAINT: "true"
       MYSYNC_SEMISYNC:
+      MYSYNC_ASYNC:
+      ASYNC_ALLOWED_LAG:
       MYSYNC_CRITICAL_DISK_USAGE:
       MYSYNC_KEEP_SUPER_WRITABLE_ON_CRITICAL_DISK_USAGE:
       MYSYNC_WAIT_FOR_SLAVE_COUNT:
