--- a/.github/workflows/docker-tests-8.0.yml
+++ b/.github/workflows/docker-tests-8.0.yml
@@ -58,6 +58,7 @@ jobs:
           - 'VERSION=8.0 GODOG_FEATURE=readonly_filesystem.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=recovery.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=repair.feature make test'
+          - 'VERSION=8.0 GODOG_FEATURE=repl_mon.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=statefile.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=switchover_from.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=switchover_to.feature make test'
