--- a/.github/workflows/docker-tests.yml
+++ b/.github/workflows/docker-tests.yml
@@ -55,8 +55,9 @@ jobs:
           - 'GODOG_FEATURE=priority.feature make test'                                                                            
           - 'GODOG_FEATURE=readonly_filesystem.feature make test'                                                                 
           - 'GODOG_FEATURE=recovery.feature make test'                                                                            
-          - 'GODOG_FEATURE=repair.feature make test'                                                                              
-          - 'GODOG_FEATURE=statefile.feature make test'                                                                           
+          - 'GODOG_FEATURE=repair.feature make test'
+          - 'GODOG_FEATURE=repl_mon.feature make test'
+          - 'GODOG_FEATURE=statefile.feature make test'
           - 'GODOG_FEATURE=switchover_from.feature make test'                                                                     
           - 'GODOG_FEATURE=switchover_to.feature make test'                                                                       
           - 'GODOG_FEATURE=zk_failure.feature make test'                                                                          
