[WIP] support async replication (#88)
* support async replication

* fix a_sync->async, add async in tests yaml

* fix mysync.yaml syntax err

* fix docker compose cfg

* fix waitForCatchUp return in async mode

* set master online on switchover: phase 5

* fix PriorityChoiceMaxLag in async mode

* fix queryCalcMdbReplMonTsDelay query

* async mode: add tests, fix linters

* async mode: add tests, fix linters

* async mode: add tests, fix linters

* async replication refactoring

* async replication test fix

* async replication test fix

* async replication test fix

* async replication test fix

* async replication test fix

* add mysync-repl-mon feature

* add refactor mdb_repl_mon table name to custom configuring name

* add refactor mdb_repl_mon table name to custom configuring name

* repl_mon fixes

* repl_mon fixes

* fix typo

* add repl_mon tests

* fix async tests

* fix async tests

* fix async tests, add repl_mon.feature launch

* fix async tests

* fix async tests, fix repl_mon tests

* add switch_helper

* linters fix

* fix " too many arguments "

* linters fix

* linters fix

* linters fix

* fix async tests

* fix async tests

* refactor switch_helper

---------

Co-authored-by: suetin <suetin@yandex-team.ru>
Co-authored-by: teem0n <rockie@yandex.ru>

--- a/.github/workflows/docker-tests-8.0.yml
+++ b/.github/workflows/docker-tests-8.0.yml
@@ -42,6 +42,7 @@ jobs:
         command:
           - 'VERSION=8.0 GODOG_FEATURE=active_nodes.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=async.feature make test'
+          - 'VERSION=8.0 GODOG_FEATURE=async_setting.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=cascade_replicas.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=CLI.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=crash_recovery.feature make test'
@@ -57,6 +58,7 @@ jobs:
           - 'VERSION=8.0 GODOG_FEATURE=readonly_filesystem.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=recovery.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=repair.feature make test'
+          - 'VERSION=8.0 GODOG_FEATURE=repl_mon.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=statefile.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=switchover_from.feature make test'
           - 'VERSION=8.0 GODOG_FEATURE=switchover_to.feature make test'
