--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -86,6 +86,8 @@ services:
       MYSQL_PORT: 3306
       MYSYNC_DISABLE_REPLICATION_ON_MAINT: "true"
       MYSYNC_SEMISYNC:
+      MYSYNC_ASYNC:
+      ASYNC_ALLOWED_LAG:
       MYSYNC_CRITICAL_DISK_USAGE:
       MYSYNC_KEEP_SUPER_WRITABLE_ON_CRITICAL_DISK_USAGE:
       MYSYNC_WAIT_FOR_SLAVE_COUNT:
@@ -93,6 +95,8 @@ services:
       MYSYNC_RESETUP_CRASHED_HOSTS:
       MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:
       MYSYNC_SET_RO_TIMEOUT:
+      MYSYNC_REPLICATION_LAG_QUERY:
+      REPL_MON:
     healthcheck:
       test: "mysql --user=admin --password=admin_pwd -e 'SELECT 1'"
       start_period: 30s
@@ -128,6 +132,8 @@ services:
       MYSQL_PORT: 3306
       MYSYNC_DISABLE_REPLICATION_ON_MAINT: "true"
       MYSYNC_SEMISYNC:
+      MYSYNC_ASYNC:
+      ASYNC_ALLOWED_LAG:
       MYSYNC_CRITICAL_DISK_USAGE:
       MYSYNC_KEEP_SUPER_WRITABLE_ON_CRITICAL_DISK_USAGE:
       MYSYNC_WAIT_FOR_SLAVE_COUNT:
@@ -135,6 +141,8 @@ services:
       MYSYNC_RESETUP_CRASHED_HOSTS:
       MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:
       MYSYNC_SET_RO_TIMEOUT:
+      MYSYNC_REPLICATION_LAG_QUERY:
+      REPL_MON:
     depends_on:
       mysql1:
         condition: service_healthy
@@ -164,6 +172,8 @@ services:
       MYSQL_PORT: 3306
       MYSYNC_DISABLE_REPLICATION_ON_MAINT: "true"
       MYSYNC_SEMISYNC:
+      MYSYNC_ASYNC:
+      ASYNC_ALLOWED_LAG:
       MYSYNC_CRITICAL_DISK_USAGE:
       MYSYNC_KEEP_SUPER_WRITABLE_ON_CRITICAL_DISK_USAGE:
       MYSYNC_WAIT_FOR_SLAVE_COUNT:
@@ -171,6 +181,8 @@ services:
       MYSYNC_RESETUP_CRASHED_HOSTS:
       MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:
       MYSYNC_SET_RO_TIMEOUT:
+      MYSYNC_REPLICATION_LAG_QUERY:
+      REPL_MON:
     depends_on:
       mysql1:
         condition: service_healthy
