--- a/tests/images/mysql/mysync.yaml
+++ b/tests/images/mysql/mysync.yaml
@@ -60,4 +60,5 @@ replication_repair_aggressive_mode: ${MYSYNC_REPLICATION_REPAIR_AGGRESSIVE_MODE:
 test_filesystem_readonly_file: /tmp/readonly
 replication_channel: ''
 external_replication_type: 'external'
+show_only_gtid_diff: false
 repl_mon: ${REPL_MON:-false}
