--- a/tests/images/jepsen_common/Dockerfile
+++ b/tests/images/jepsen_common/Dockerfile
@@ -4,3 +4,4 @@ RUN (yes | ssh-keygen -m PEM -t rsa -b 2048 -N '' -f /root/test_ssh_key -C root@
                                 cp /root/test_ssh_key.pub /root/.ssh/id_rsa.pub && \
                                 cp /root/test_ssh_key /root/.ssh/id_rsa && ssh-add -k /root/.ssh/id_rsa
 COPY ./ssh_config /etc/ssh/ssh_config
+COPY ./sshd_config /etc/ssh/sshd_config
