change time limit

--- a/.github/workflows/docker-jepsen.yml
+++ b/.github/workflows/docker-jepsen.yml
@@ -1,6 +1,10 @@
 name: Jepsen tests
 
 on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
   schedule:
     - cron: '0 0 * * *'
 
