--- a/.github/workflows/docker-jepsen.yml
+++ b/.github/workflows/docker-jepsen.yml
@@ -15,6 +15,7 @@ jobs:
   test:
     name: jepsen
     runs-on: ubuntu-22.04
+    timeout-minutes: 720
     steps:
       - name: Set up Go 1.x
         uses: actions/setup-go@v5
