Turn on force switchover in Jepsen tests

--- a/tests/images/mysql_jepsen/mysync.yaml
+++ b/tests/images/mysql_jepsen/mysync.yaml
@@ -33,3 +33,5 @@ disable_semi_sync_replication_on_maintenance: ${MYSYNC_DISABLE_REPLICATION_ON_MA
 replication_channel: ''
 test_filesystem_readonly_file: /tmp/readonly
 test_disk_usage_file: /tmp/usedspace
+show_only_gtid_diff: true
+force_switchover: true
