--- a/tests/images/base/Dockerfile
+++ b/tests/images/base/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:jammy
-ENV container docker
-ENV DEBIAN_FRONTEND noninteractive
+ENV container=docker
+ENV DEBIAN_FRONTEND=noninteractive
 ENV ZK_VERSION=3.7.1
 ARG MYSQL_VERSION=""
 ENV MYSQL_VERSION="${MYSQL_VERSION}"
