add: manager don`t leave master
- manager_switchover flag
- MasterVisibleByManager() fuction
- 2 new tests
- update linter

--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -97,6 +97,7 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
+      MANAGER_SWITCHOVER: "true"
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     healthcheck:
@@ -145,6 +146,7 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
+      MANAGER_SWITCHOVER: "false"
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     depends_on:
@@ -187,6 +189,7 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
+      MANAGER_SWITCHOVER: "false"
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     depends_on:
