--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -97,7 +97,7 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
-      MANAGER_SWITCHOVER: "true"
+      MANAGER_SWITCHOVER: 
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     healthcheck:
@@ -146,7 +146,7 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
-      MANAGER_SWITCHOVER: "false"
+      MANAGER_SWITCHOVER:
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     depends_on:
@@ -189,7 +189,7 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
-      MANAGER_SWITCHOVER: "false"
+      MANAGER_SWITCHOVER:
       MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
       MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     depends_on:
