--- a/.golangci.yml
+++ b/.golangci.yml
@@ -75,7 +75,7 @@ linters:
 run:
   go: "1.18"
   timeout: 5m
-  modules-download-mode: vendor
+  modules-download-mode: mod
 
 severity:
   default-severity: error
