--- a/.golangci.yml
+++ b/.golangci.yml
@@ -3,7 +3,6 @@
 
 # all available settings of specific linters
 linters-settings:
-  modules-download-mode: vendor
   dupl:
     threshold: 400
   funlen:
@@ -74,8 +73,9 @@ linters:
     - whitespace
 
 run:
-  go: 1.18
+  go: "1.22"
   timeout: 5m
+  modules-download-mode: mod
 
 severity:
   default-severity: error
