feat: Manager switching upon quorum loss (#155)
* feat: implement MVP for manager switching upon quorum loss

* lint: fix linting

* fix: renaming variables and some logic improvment

* lint: some fixes for linter

* fix: increase delays

* fix: improve switch logic into app.checkQuorum()

* add: new functionality for features tests
- new steps:
  - Attach/Detach to/from User Network
  - Unmatch ZookeeperNode
- update steps:
  - Now stepIRunCommandOnHost (and stepIRunCommandOnHostWithTimeout too) support templateString (you can add some variable to your command)
- new Matcher: RegexpUnMatcher

* Add: new test for this feature
- add new field to docker-compose.yaml and mysync.yaml

* lint: small formating of code

* add: manager don`t leave master

- manager_switchover flag
- MasterVisibleByManager() fuction
- 2 new tests
- update linter

* fix: add new flag MANAGER_SWITCHOVER to environment correctly

* fix: linter and env vars in manager_switchover.feature

--- a/tests/images/docker-compose.yaml
+++ b/tests/images/docker-compose.yaml
@@ -97,6 +97,9 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
+      MANAGER_SWITCHOVER: 
+      MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
+      MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     healthcheck:
       test: "mysql --user=admin --password=admin_pwd -e 'SELECT 1'"
       start_period: 30s
@@ -143,6 +146,9 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
+      MANAGER_SWITCHOVER:
+      MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
+      MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     depends_on:
       mysql1:
         condition: service_healthy
@@ -183,6 +189,9 @@ services:
       MYSYNC_SET_RO_TIMEOUT:
       MYSYNC_REPLICATION_LAG_QUERY:
       REPL_MON:
+      MANAGER_SWITCHOVER:
+      MANAGER_ELECTION_DELAY_AFTER_QUORUM_LOSS:
+      MANAGER_LOCK_ACQUIRE_DELAY_AFTER_QUORUM_LOSS:
     depends_on:
       mysql1:
         condition: service_healthy
